# logzio-structlog-handler

./: .pre-commit-config.yaml  README.md  pyproject.toml
logzio_structlog_handler/: __init__.py
structlogzio/: __init__.py  _handler.py
